# vissper-oss

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  config.toml
.claude/: docs-markdown.md  observability.md  rust-async.md  rust-core.md  rust-error-handling.md  security.md
.claude/agents/: code-standards-reviewer.md  macos-ui-designer.md
.claude/commands/: git.md
assets/: icon.icns
docs/: rust-macos-menubar-architecture.md
release/: build-macos.sh.example
resources/configs/: Info.plist  entitlements.plist
scripts/: generate_icons.sh
src/: azure_openai.rs  error.rs  hotkeys.rs  keychain.rs  main.rs  openai.rs  preferences.rs  response.rs  screenshot.rs  screenshot_flash.rs  storage.rs  version_check.rs
src/audio/: mod.rs  resampler.rs  types.rs
src/callbacks/: hotkeys.rs  mod.rs
src/menubar/: builder.rs  delegate.rs  icons.rs  items.rs  mod.rs  state.rs
src/menubar/updates/: app_update.rs  language.rs  mod.rs  state.rs
src/recording/: clipboard.rs  events.rs  mod.rs  polish.rs  polish_helpers.rs  transcription_task.rs
src/region_selection/: mod.rs  state.rs  view.rs
src/settings_window/: delegate.rs  folder_picker.rs  mod.rs  path_utils.rs
src/settings_window/actions/: azure.rs  mod.rs  openai.rs  paths.rs  provider.rs
src/settings_window/controls/: azure.rs  background.rs  helpers.rs  location.rs  mod.rs  openai.rs  transparency.rs
src/transcription/: azure_connection.rs  azure_messages.rs  error.rs  helpers.rs  mod.rs  openai_connection.rs  openai_messages.rs  session.rs
src/transcription_window/: controls.rs  delegates.rs  markdown.rs  mod.rs  objc_utils.rs  state.rs  window.rs
src/transcription_window/api/: mod.rs  pdf_writer.rs  recording.rs  save.rs  tab_content.rs  tabs.rs  text.rs  window.rs
src/transcription_window/components/: header.rs  mod.rs  tab_control.rs  text_view.rs
