[package]
name = "vissper"
version = "0.3.2"
edition = "2021"
description = "Open-source desktop transcription app using Azure OpenAI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vissper/vissper-oss"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1.0"         # For version comparison
reqwest = { version = "0.11", features = ["json"] }
url = "2"
rand = "0.8"          # For generating random nonces
anyhow = "1.0"        # For error handling
thiserror = "1.0"     # For custom error types
dotenvy = "0.15"      # For loading .env files
toml = "0.8"          # For loading config.toml
tracing = "0.1"       # For structured logging
tracing-subscriber = "0.3"  # For logging initialization
once_cell = "1.19"    # For lazy static initialization
cpal = "0.15"         # Cross-platform audio I/O
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }  # WebSocket client
http = "1.0"          # HTTP types for WebSocket requests
base64 = "0.21"       # Audio encoding for WebSocket
dirs = "5.0"          # User directories for transcript storage
chrono = "0.4"        # Timestamp formatting
futures-util = "0.3"  # For stream utilities
rubato = "0.15"       # Audio resampling for STT
arboard = "3.4"       # Cross-platform clipboard access
image = { version = "0.25", default-features = false, features = ["png"] }  # Image decoding for clipboard
global-hotkey = "0.6" # Global keyboard shortcuts
open = "5.0"          # For opening URLs
genpdf = "0.2"        # PDF generation for transcript export
zeroize = "1.7"       # For secure memory clearing of secrets

# macOS-specific
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSData", "NSString", "NSThread", "NSObject", "NSOperation", "NSAttributedString", "NSRange", "NSDictionary"] }
objc2-app-kit = { version = "0.2", features = [
    "NSApplication",
    "NSMenu",
    "NSMenuItem",
    "NSStatusBar",
    "NSStatusBarButton",
    "NSStatusItem",
    "NSImage",
    "NSImageRep",
    "NSWindow",
    "NSScreen",
    "NSColor",
    "NSButton",
    "NSControl",
    "NSView",
    "NSResponder",
    "NSRunningApplication",
    "NSCell",
    "NSGraphics",
    "NSTextField",
    "NSText",
    "NSFont",
    "NSScrollView",
    "NSTextView",
    "NSClipView",
    "NSOpenPanel",
    "NSSavePanel",
    "NSPanel",
    "NSAlert",
    "NSSlider",
    "NSSegmentedControl",
    "NSBox",
    "NSVisualEffectView",
    "NSImageView",
    "NSPopUpButton",
    "NSStackView",
    "NSEvent",
    "NSBezierPath",
    "NSGraphicsContext",
    "NSTabView",
    "NSTabViewItem",
] }
block2 = "0.5"
dispatch = "0.2"            # For main thread dispatch
security-framework = "2.9"  # For macOS Keychain
